<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <!-- LAYOUT FORMULARIO -->
    <LinearLayout
        android:id="@+id/layout_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog_background"
        android:orientation="vertical">

        <!--CABEÇALHO DO DIALOG-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_new_expense"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/button_close_form"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:src="@drawable/vector_close"
                app:tint="@color/black" />
        </FrameLayout>

        <!--CATEGORIA-->

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_blue_A400"
            android:spinnerMode="dropdown"/>

        <!--CAMPOS DE VALOR/DATA DO DIALOG-->

        <LinearLayout
            android:id="@+id/layout_field_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/field_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_value"
                android:textColor="@color/black"
                android:inputType="numberDecimal"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_value_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red_300"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_field_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/field_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_date"
                android:focusable="false"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_date_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red_300"
                android:visibility="gone"/>
        </LinearLayout>

        <!--BOTAO ADD NOVO ITEM-->

        <Button
            android:id="@+id/button_include_item"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_button_bordered"
            android:backgroundTint="@null"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/button_include_item"
            android:textColor="@color/light_blue_A400"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"/>


        <!--RECYCLER VIEW ITENS LISTA DO DIALOG-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_saved_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:maxHeight="150dp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/layout_total_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_total_value"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_valor_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/blue_700"
                android:textSize="14sp"
                tools:text="150" />

        </LinearLayout>

        <!--BOTAO SALVAR-->

        <Button
            android:id="@+id/button_save"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_button"
            android:text="@string/button_save"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <!-- LAYOUT ITENS MERCADO -->
    <LinearLayout
        android:id="@+id/layout_market_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog_background"
        android:orientation="vertical"
        android:visibility="visible">

        <!--CABEÇALHO DO DIALOG-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_select_market_item"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/button_close_market_items"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:src="@drawable/vector_close"
                app:tint="@color/black" />
        </FrameLayout>

        <!--RECYCLER VIEW ITENS MERCADO-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_market_include_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            tools:listitem="@layout/recycler_market_include_item"/>

    </LinearLayout>
</LinearLayout>

